# softphysics

./: CMakeLists.txt  Makefile  README.md  boundingbox.cpp  camera.cpp  camera.hpp  main.cpp  mainwindow.cpp  mainwindow.hpp  physics.cpp  physics.hpp  plan.txt  renderer.cpp  renderer.hpp  scene.cpp  scene.hpp  simobject.hpp  tests.cpp
include/glad/: glad.h
shaders/: solid.frag  solid.vert
src/: boundingbox.cpp  boundingbox.hpp  camera.cpp  camera.hpp  glad.c  main.cpp  mainwindow.cpp  mainwindow.hpp  physics.cpp  physicsfuncs.cpp  physicsfuncs.hpp  renderer.cpp  renderer.hpp  scene.cpp  scene.hpp  simobject.hpp
src/shaders/: solid.frag  solid.vert  solid.vertb
tests/: approxequal.hpp  test.cpp  test_boundingbox.cpp  test_camera.cpp  test_physicsfuncs.cpp  test_renderer.cpp
